cambie estilos del contador

--- a/src/componentes/ItemCount/ItemCount.css
+++ b/src/componentes/ItemCount/ItemCount.css
@@ -1,3 +1,12 @@
 .FondoDiv{
-    background-color: red;
+    color: black;
+    padding: 50px;
+    background-color:rgb(141, 51, 51);
+}
+
+.Botones{
+    background-color: grey;
+    font-size: 15px;
+    border-radius: 10px;
+
 }
